examples/type_system/failing/107_let_annotation_bool_int.flx
fn main() -> Unit {
    let flag: Bool = 42
}
